fix(search): Reduce spacing on action buttons.
Closes #795

--- a/app/scripts/components/tables/styles/styles.less
+++ b/app/scripts/components/tables/styles/styles.less
@@ -29,6 +29,15 @@
     display: inline-block;
   }
 
+  > div > a {
+    margin-left: 5px;
+  }
+}
+.table-compile-cell {
+  > div > div {
+    display: inline-block;
+  }
+
   > div > button {
     margin-left: 5px;
 
